k8s/deployment.yaml
apiVersion: v1
kind: Namespace
metadata: {name: demo}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: secure-demo-api
  namespace: demo
spec:
  replicas: 2
  selector: {matchLabels: {app: secure-demo-api}}
  template:
    metadata: {labels: {app: secure-demo-api}}
    spec:
      serviceAccountName: secure-demo-api
      automountServiceAccountToken: false
      securityContext: {runAsNonRoot: true, runAsUser: 10001, seccompProfile: {type: RuntimeDefault}}
      containers:
        - name: api
          image: ghcr.io/OWNER/devsecops-pipeline:latest
          ports: [{name: http, containerPort: 8000}]
          securityContext: {allowPrivilegeEscalation: false, capabilities: {drop: [ALL]}, readOnlyRootFilesystem: true}
          readinessProbe: {httpGet: {path: /health, port: http}}
          livenessProbe: {httpGet: {path: /health, port: http}}
          resources: {requests: {cpu: 10m, memory: 32Mi}, limits: {cpu: 100m, memory: 64Mi}}
---
apiVersion: v1
kind: Service
metadata: {name: secure-demo-api, namespace: demo}
spec:
  selector: {app: secure-demo-api}
  ports: [{port: 80, targetPort: http}]
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: {name: secure-demo-api, namespace: demo}
spec:
  podSelector: {matchLabels: {app: secure-demo-api}}
  policyTypes: [Ingress]
  ingress:
    - from: [{namespaceSelector: {matchLabels: {kubernetes.io/metadata.name: demo}}}]
      ports: [{protocol: TCP, port: 8000}]
